# High-Performance-Software-Skeleton

./: .gitignore  CMakeConf.cmake  CMakeLists.txt  CMakeSettings.json  README.md
asgn/: CMakeLists.txt  bsearchasgn.hpp  bsearchgold-avx-mpi-homo.cpp  bsearchgold-avx-phi.cpp  bsearchgold-debug.cpp  bsearchgold-mpi-homo.cpp  bsearchgold-phi.cpp  bsearchgold-sse-mpi-homo.cpp  bsearchgold-sse-phi.cpp  bsearchgold.cpp  bsearchgolddebug.cpp  bsearchmain.cpp  dcnnasgn.hpp  dcnnbinfile.hpp  dcnncombined.hpp  dcnnelements.hpp  dcnnfmwkmain.cpp  dcnngold-avx-mpi-homo.cpp  dcnngold-avx-phi.cpp  dcnngold-mpi-homo.cpp  dcnngold-phi.cpp  dcnngold-sse-mpi-homo.cpp  dcnngold-sse-phi.cpp  dcnngold.cpp  dcnngolddebug.cpp  dcnnmain.md  fmwkng.hpp  matrixasgn.hpp  matrixgold-avx-mpi-homo.cpp  matrixgold-avx-phi.cpp  matrixgold-debug.cpp  matrixgold-mpi-homo.cpp  matrixgold-phi.cpp  matrixgold-sse-mpi-homo.cpp  matrixgold-sse-phi.cpp  matrixgold.cpp  matrixgolddebug.cpp  matrixmain.cpp  tagged.hpp
sol/: CMakeLists.txt  bsearchsol.cpp  bsearchsol.hpp  dcnnsol.cpp  dcnnsol.hpp  matrixsol.cpp  matrixsol.hpp
